# Noughts-and-Crosses

./: .env_example  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
src/: __init__.py  nacstudentsempty.py
src/noughtsandcrosses/: __init__.py  __main__.py  mlforkidsnumbers.py  nacstudentsempty.py  scoreboard.py
